[package]
name = "RBMK-1000"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
crossterm = "0.26.1"
tui = {version = "0.19.0", git = "https://github.com/V8gaming/tui-rs.git#6ffde0f"}
unicode-width = "0.1.10"
rayon = "1.7.0"
regex = {version = "1.7.1", features = ["pattern"]}
rand = "0.8.5"
colorgrad = "0.6.2"
xml-rs = "0.8.4"
flo_curves = "0.7.0"
itertools = "0.10.5"
lazy_static = "1.4.0"